@@ -5,6 +5,9 @@ Changes for Crate Admin Interface
 Unreleased
 ==========
 
+ - Added compatibility with future crate versions which will serve
+   the admin-ui from `/admin/` instead of `/_plugins/crate-admin/`.
+
 2016/12/12 1.0.2
 ================
 
